WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270928
[iOS 17.4] ~11 layout tests debug assert in `-handleKeyEntry:withCompletionHandler:`
https://bugs.webkit.org/show_bug.cgi?id=270928
Summary
[iOS 17.4] ~11 layout tests debug assert in `-handleKeyEntry:withCompletionHa...
Wenson Hsieh
Reported
2024-03-13 13:42:40 PDT
rdar://123028621
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-03-13 14:03:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/25836
EWS
Comment 2
2024-03-13 19:20:15 PDT
Committed
276062@main
(a477452eb93f): <
https://commits.webkit.org/276062@main
> Reviewed commits have been landed. Closing PR #25836 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug